fixed missaligned icons (data-processing and data-response)

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -113,7 +113,7 @@ header > nav > ul li a:hover {
 
 .main  #form-home .data-processing {
     place-self: center;
-    width: 100%;
+    width: 103%;
     display: flex;
     justify-content: center;
     align-items: center;
